// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an expandable table 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,12 @@
  <DocumentFragment>
    <pre>
      <code>
        {
-   "expanded": []
+   "expanded": [
+     "0"
+   ]
  }
      </code>
    </pre>
    <table>
      <thead>
@@ -64,10 +66,37 @@
      <tbody>
        <tr>
          <td>
            <span
              style="cursor: pointer; padding-left: 0rem;"
+           >
+             👇
+           </span>
+         </td>
+         <td>
+           tanner
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           29
+         </td>
+         <td>
+           100
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
            >
              👉
            </span>
          </td>
          <td>
@@ -85,10 +114,91 @@
          <td>
            In Relationship
          </td>
          <td>
            50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           derek
+         </td>
+         <td>
+           perkins
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           Single
+         </td>
+         <td>
+           80
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           joe
+         </td>
+         <td>
+           bergevin
+         </td>
+         <td>
+           45
+         </td>
+         <td>
+           20
+         </td>
+         <td>
+           Complicated
+         </td>
+         <td>
+           10
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 2rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           jaylen
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           26
+         </td>
+         <td>
+           99
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           70
          </td>
        </tr>
        <tr>
          <td>
            <span
`;

exports[`renders an expandable table 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,12 @@
  <DocumentFragment>
    <pre>
      <code>
        {
    "expanded": [
-     "0"
+     "0",
+     "0.0"
    ]
  }
      </code>
    </pre>
    <table>
@@ -94,10 +95,37 @@
        <tr>
          <td>
            <span
              style="cursor: pointer; padding-left: 2rem;"
            >
+             👇
+           </span>
+         </td>
+         <td>
+           tanner
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           29
+         </td>
+         <td>
+           100
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
              👉
            </span>
          </td>
          <td>
            tanner
@@ -114,10 +142,91 @@
          <td>
            In Relationship
          </td>
          <td>
            50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           derek
+         </td>
+         <td>
+           perkins
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           Single
+         </td>
+         <td>
+           80
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           joe
+         </td>
+         <td>
+           bergevin
+         </td>
+         <td>
+           45
+         </td>
+         <td>
+           20
+         </td>
+         <td>
+           Complicated
+         </td>
+         <td>
+           10
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 4rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           jaylen
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           26
+         </td>
+         <td>
+           99
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           70
          </td>
        </tr>
        <tr>
          <td>
            <span
`;

exports[`renders an expandable table 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,12 @@
    <pre>
      <code>
        {
    "expanded": [
      "0",
-     "0.0"
+     "0.0",
+     "0.0.0"
    ]
  }
      </code>
    </pre>
    <table>
@@ -122,10 +123,37 @@
        <tr>
          <td>
            <span
              style="cursor: pointer; padding-left: 4rem;"
            >
+             👇
+           </span>
+         </td>
+         <td>
+           tanner
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           29
+         </td>
+         <td>
+           100
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
              👉
            </span>
          </td>
          <td>
            tanner
@@ -142,10 +170,91 @@
          <td>
            In Relationship
          </td>
          <td>
            50
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           derek
+         </td>
+         <td>
+           perkins
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           40
+         </td>
+         <td>
+           Single
+         </td>
+         <td>
+           80
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           joe
+         </td>
+         <td>
+           bergevin
+         </td>
+         <td>
+           45
+         </td>
+         <td>
+           20
+         </td>
+         <td>
+           Complicated
+         </td>
+         <td>
+           10
+         </td>
+       </tr>
+       <tr>
+         <td>
+           <span
+             style="cursor: pointer; padding-left: 6rem;"
+           >
+             👉
+           </span>
+         </td>
+         <td>
+           jaylen
+         </td>
+         <td>
+           linsley
+         </td>
+         <td>
+           26
+         </td>
+         <td>
+           99
+         </td>
+         <td>
+           In Relationship
+         </td>
+         <td>
+           70
          </td>
        </tr>
        <tr>
          <td>
            <span
`;

exports[`renders an expandable table 4`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,11 +3,12 @@
      <code>
        {
    "expanded": [
      "0",
      "0.0",
-     "0.0.0"
+     "0.0.0",
+     "0.0.0.0"
    ]
  }
      </code>
    </pre>
    <table>
@@ -150,11 +151,11 @@
        <tr>
          <td>
            <span
              style="cursor: pointer; padding-left: 6rem;"
            >
-             👉
+             👇
            </span>
          </td>
          <td>
            tanner
          </td>
@@ -170,10 +171,30 @@
          <td>
            In Relationship
          </td>
          <td>
            50
+         </td>
+       </tr>
+       <tr>
+         <td
+           colspan="7"
+         >
+           <pre>
+             <code>
+               {
+   "values": {
+     "firstName": "tanner",
+     "lastName": "linsley",
+     "age": 29,
+     "visits": 100,
+     "status": "In Relationship",
+     "progress": 50
+   }
+ }
+             </code>
+           </pre>
          </td>
        </tr>
        <tr>
          <td>
            <span
`;

exports[`renders an expandable table 5`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,15 +1,10 @@
  <DocumentFragment>
    <pre>
      <code>
        {
-   "expanded": [
-     "0",
-     "0.0",
-     "0.0.0",
-     "0.0.0.0"
-   ]
+   "expanded": []
  }
      </code>
    </pre>
    <table>
      <thead>
@@ -70,92 +65,11 @@
        <tr>
          <td>
            <span
              style="cursor: pointer; padding-left: 0rem;"
            >
-             👇
-           </span>
-         </td>
-         <td>
-           tanner
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           29
-         </td>
-         <td>
-           100
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           50
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👇
-           </span>
-         </td>
-         <td>
-           tanner
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           29
-         </td>
-         <td>
-           100
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           50
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👇
-           </span>
-         </td>
-         <td>
-           tanner
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           29
-         </td>
-         <td>
-           100
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           50
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👇
+             👉
            </span>
          </td>
          <td>
            tanner
          </td>
@@ -171,273 +85,10 @@
          <td>
            In Relationship
          </td>
          <td>
            50
-         </td>
-       </tr>
-       <tr>
-         <td
-           colspan="7"
-         >
-           <pre>
-             <code>
-               {
-   "values": {
-     "firstName": "tanner",
-     "lastName": "linsley",
-     "age": 29,
-     "visits": 100,
-     "status": "In Relationship",
-     "progress": 50
-   }
- }
-             </code>
-           </pre>
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           derek
-         </td>
-         <td>
-           perkins
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           Single
-         </td>
-         <td>
-           80
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           joe
-         </td>
-         <td>
-           bergevin
-         </td>
-         <td>
-           45
-         </td>
-         <td>
-           20
-         </td>
-         <td>
-           Complicated
-         </td>
-         <td>
-           10
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 6rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           jaylen
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           26
-         </td>
-         <td>
-           99
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           70
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           derek
-         </td>
-         <td>
-           perkins
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           Single
-         </td>
-         <td>
-           80
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           joe
-         </td>
-         <td>
-           bergevin
-         </td>
-         <td>
-           45
-         </td>
-         <td>
-           20
-         </td>
-         <td>
-           Complicated
-         </td>
-         <td>
-           10
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 4rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           jaylen
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           26
-         </td>
-         <td>
-           99
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           70
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           derek
-         </td>
-         <td>
-           perkins
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           40
-         </td>
-         <td>
-           Single
-         </td>
-         <td>
-           80
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           joe
-         </td>
-         <td>
-           bergevin
-         </td>
-         <td>
-           45
-         </td>
-         <td>
-           20
-         </td>
-         <td>
-           Complicated
-         </td>
-         <td>
-           10
-         </td>
-       </tr>
-       <tr>
-         <td>
-           <span
-             style="cursor: pointer; padding-left: 2rem;"
-           >
-             👉
-           </span>
-         </td>
-         <td>
-           jaylen
-         </td>
-         <td>
-           linsley
-         </td>
-         <td>
-           26
-         </td>
-         <td>
-           99
-         </td>
-         <td>
-           In Relationship
-         </td>
-         <td>
-           70
          </td>
        </tr>
        <tr>
          <td>
            <span
`;
